[package]
name = "transcription_benchmarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream","multipart","json"] }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
tokio-util = {version = "0.7.11", features = ["codec"]}
anyhow = "1.0.86"
